--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,39 @@
 }
 .container {
   max-width: 80%;
-  margin: 50px;
+  margin: 25px;
 }
 .row {
   width: 30%;
 }
 input {
   width: 20px;
-  height: 20px;
+  height: 15px;
 }
 label {
   width: 365px;
   height: 24px;
+}
+.f-p {
+  width: 231px;
+  height: 24px;
   gap: 16px;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.f-p2 {
+  width: 356px;
+  height: 28px;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 .f-heading {
   color: #141c24;
@@ -32,14 +52,50 @@ label {
   letter-spacing: 0em;
   text-align: center;
 }
-.img{
+.img {
   width: 200px;
   height: 40px;
 }
+.f-input {
+  width: 20px;
+}
+.f-line {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  column-gap: 1.6rem;
+  width: 19px;
+  height: 20px;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.f-line::before,
+.f-line::after {
+  content: "";
+  height: 1px;
+  width: 166.5px;
+  background-color: #e4e7ec;
+  display: block;
+}
+.button-text {
+  width: 154px;
+  height: 24px;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.Button {
+  width: 110%;
+}
+
 @media (max-width: 767.98px) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
   .row {
     width: 105%;
   }
@@ -47,5 +103,13 @@ label {
     width: 260px;
     height: 24px;
     gap: 16px;
+  }
+  .f-p2 {
+    width: 56px;
+    height: 30px;
+    font-family: "Roboto";
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 24px;
   }
 }
