--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+/* fpage page/*/
 .container {
   max-width: 80%;
   margin: 25px;
@@ -59,6 +60,7 @@ label {
 .f-input {
   width: 20px;
 }
+/* Signup page/*/
 .f-line {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -94,7 +96,45 @@ label {
 .Button {
   width: 110%;
 }
-
+/* Pagev page/*/
+.pagev-p {
+  width: 384px;
+  height: 48px;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #344051;
+}
+.pagev-btn {
+  color: #344051;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.otp-area {
+  width: 70%;
+  margin: 20px auto;
+  display: flex;
+  gap: 20px;
+}
+.otp-area input {
+  width: 56px;
+  height: 56px;
+  padding: 16px;
+  outline: none;
+  text-align: center;
+  border-radius: 12px;
+  border: 2px solid #e4e7ec;
+  &:focus {
+    border: 2px solid black;
+  }
+}
 @media (max-width: 767.98px) {
   .row {
     width: 105%;
@@ -104,12 +144,64 @@ label {
     height: 24px;
     gap: 16px;
   }
-  .f-p2 {
-    width: 56px;
-    height: 30px;
+  .f-line {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    column-gap: 1.2rem;
+    width: 19px;
+    height: 20px;
     font-family: "Roboto";
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+  .f-line::before,
+  .f-line::after {
+    content: "";
+    height: 1px;
+    width: 110px;
+    background-color: #e4e7ec;
+    display: block;
+  }
+  /* Pagev page/*/
+  .otp-area {
+    width: 70%;
+    margin: 10px auto;
+    display: flex;
+    gap: 10px;
+  }
+  .otp-area input {
+    width: 45px;
+    height: 50px;
+    padding: 16px;
+    outline: none;
+    text-align: center;
+    border-radius: 12px;
+    border: 2px solid #e4e7ec;
+    &:focus {
+      border: 2px solid black;
+    }
+  }
+  .pagev-p {
+    width: 384px;
+    height: 60px;
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
     line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #344051;
+  }
+  .pagev-p2 {
+    width: 100%;
+    font-size: 12px;
+    font-weight: 600;
+  }
+  .fw-semibold {
+    font-size: 14px;
   }
 }
