--- a/src/App.css
+++ b/src/App.css
@@ -179,17 +179,20 @@ label {
 .Pass-btn {
   position: absolute;
   top: 10%;
-  right: 10%;
+  right: 1%;
   aspect-ratio: 1;
   height: 80%;
   border-radius: 50%;
   cursor: pointer;
-  border: none;
   background: none;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 8px;
+}
+.Passw-input {
+  height: 40px;
+  border-radius: 8px;
 }
 
 @media (max-width: 767.98px) {
