--- a/src/App.css
+++ b/src/App.css
@@ -217,53 +217,14 @@ label {
   letter-spacing: 0em;
   text-align: left;
 }
-.password {
-  height: 0.4rem;
-  width: 100%;
-  background-color: #f5f5f5;
-  border-radius: 0.4rem;
+
+.progress-bar {
+  transition: 0.4s ease-in-out;
 }
-#bar {
-  width: 0;
-  background: transparent;
-  border-radius: inherit;
-  transition: all 300ms ease-in-out;
-  bottom: -8px;
-  height: 5px;
-  left: 0;
-  position: absolute;
-}
-#bar[data-score="null"] {
-  width: 0;
-  background: red;
-}
-#bar[data-score="0"] {
-  width: 5%;
-  background: green;
-}
-#bar[data-score="1"] {
-  width: 25%;
-  background: blue;
-}
-#bar[data-score="2"] {
-  width: 50%;
-  background: blue;
-}
-#bar[data-score="3"] {
-  width: 75%;
-  background: gold;
-}
-#bar[data-score="4"] {
-  width: 100%;
-  background: darkmagenta;
-}
+
 .label-password {
   display: block;
   position: relative;
-  text-transform: uppercase;
-  font-weight: 700;
-  width: 100%;
-  color: #777222;
 }
 .input-password {
   display: block;
@@ -272,25 +233,44 @@ label {
   height: 40px;
   border-radius: 8px;
 }
-/* .assword {
-  cursor: pointer;
-  position: absolute;
-  bottom: 11px;
-  right: 0;
-  height: px;
-  padding: 1px 19px;
-  font-size: 0.8rem;
-  font-weight: 700;
-} */
+
 .show-password {
   cursor: pointer;
   position: absolute;
   top: 30px;
   height: 16px;
   right: 0;
-  padding: 1px 19px;
-  font-size: 0.8rem;
+  padding: 4px 29px;
+  font-size: 0.9rem;
   font-weight: 700;
+}
+.secondShow-password {
+  cursor: pointer;
+  position: absolute;
+  bottom: 85px;
+  height: 16px;
+  right: 0;
+  padding: 4px 29px;
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+/* Houserule page/*/
+.H-heading {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.h-p {
+  color: #344051;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 @media (max-width: 767.98px) {
   .row {
