--- a/src/App.css
+++ b/src/App.css
@@ -352,6 +352,7 @@ label {
   .cont {
     padding-top: 20px;
   }
+  /* CreateAcc page/*/
 }
 
 /* NavbarPage page/*/
@@ -372,7 +373,7 @@ label {
   width: 70%;
 
   display: flex;
-  gap: 5px;
+  gap: 10px;
 }
 .otp-VCode input {
   width: 56px;
@@ -384,4 +385,34 @@ label {
   &:focus {
     border: 2px solid black;
   }
+}
+/* CreateAcc page/*/
+.CreateAcc-password {
+  display: block;
+  text-transform: none;
+  width: 120%;
+  height: 50px;
+  border-radius: 8px;
+}
+.f-line2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  column-gap: 1.5rem;
+  width: 29px;
+  height: 20px;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.f-line2::before,
+.f-line2::after {
+  content: "";
+  height: 1px;
+  width: 19f0px;
+  background-color: #e4e7ec;
+  display: block;
 }
