--- a/src/App.css
+++ b/src/App.css
@@ -416,3 +416,56 @@ label {
   background-color: #e4e7ec;
   display: block;
 }
+
+/* MainPage */
+.image-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px; /* Adjust the max-width as needed */
+}
+
+.centered-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white; /* Adjust text color as needed */
+  font-size: 24px; /* Adjust font size as needed */
+  text-align: center; /* Center text horizontally */
+}
+.centered-text h4 {
+  width: 610px;
+  height: 120px;
+  font-family: "Roboto";
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 60px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.centered-text p {
+  width: 650px;
+  height: 56px;
+  font-family: "Roboto";
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.jumbotron {
+  border-radius: 16px;
+  padding: 24px;
+  gap: 12px;
+  width: 1000px;
+  height: 104px;
+  background: #ffffff;
+  align-items: center; /* Adjust margin-top as needed to position the Jumbotron */
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 2px darkgrey;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
