--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 /* fpage page/*/
 .kontainer {
   max-width: 80%;
-  margin: 25px;
+  margin: 20px;
 }
 .Row {
   width: 30%;
@@ -31,6 +31,7 @@ label {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  color: #344051;
 }
 .f-p2 {
   width: 356px;
