--- a/src/App.css
+++ b/src/App.css
@@ -732,3 +732,9 @@ input:checked + .slider:before {
 .validated {
   color: rgba(255, 255, 255, 0.5);
 }
+.list-icon {
+  margin-right: 8px;
+}
+.list-icon.green {
+  color: #0f0;
+}
