--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 .Row {
   width: 31%;
 }
+.HouseRule-Row {
+  width: 37%;
+}
 input {
   width: 20px;
   height: 15px;
@@ -373,7 +376,11 @@ label {
     font-weight: 600;
   }
   .fw-semibold {
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: "Roboto";
+    line-height: "24px";
+    color: #141c24;
   }
   /* Houserule page/*/
   .cont {
