--- a/src/App.css
+++ b/src/App.css
@@ -314,19 +314,21 @@ label {
     width: 105%;
   }
   label {
-    width: 260px;
+    width: 330px;
     height: 24px;
-    gap: 16px;
+    margin-left: auto;
+     margin-right: auto;
+    
   }
   .f-line {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    column-gap: 1.2rem;
-    width: 19px;
-    height: 20px;
+    column-gap: 1.9rem;
+    width: 30px;
+    height: 40px;
     font-family: "Roboto";
-    font-size: 14px;
+    font-size: 19px;
     font-weight: 400;
     line-height: 20px;
     letter-spacing: 0em;
@@ -336,7 +338,7 @@ label {
   .f-line::after {
     content: "";
     height: 1px;
-    width: 110px;
+    width: 130px;
     background-color: #e4e7ec;
     display: block;
   }
@@ -766,4 +768,23 @@ input:checked + .slider:before {
 
 .invalid {
   color: red;
+}
+
+.radio-container {
+  position: relative;
+}
+
+.radio-container label {
+  display: inline-block;
+  position: relative;
+}
+
+.radio-container label:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: gainsboro; /* Choose your desired color */
 }
