--- a/src/App.css
+++ b/src/App.css
@@ -317,8 +317,7 @@ label {
     width: 330px;
     height: 24px;
     margin-left: auto;
-     margin-right: auto;
-    
+    margin-right: auto;
   }
   .f-line {
     display: grid;
@@ -348,6 +347,8 @@ label {
     margin: 10px auto;
     display: flex;
     gap: 10px;
+
+    justify-content: center;
   }
   .otp-area input {
     width: 45px;
@@ -396,6 +397,9 @@ label {
     left: 73px;
     padding: 0px, 24px, 0px, 24px;
     justify-content: space-between;
+  }
+  .Reset {
+    margin-top: 0 !important;
   }
 }
 
