--- a/src/App.css
+++ b/src/App.css
@@ -309,7 +309,7 @@ label {
   margin-right: 5px;
 }
 
-@media (max-width: 767.98px) {
+@media screen and (max-width: 992px) {
   .row {
     width: 105%;
   }
@@ -399,7 +399,10 @@ label {
     justify-content: space-between;
   }
   .Reset {
-    margin-top: 0 !important;
+    margin-top: 5px !important;
+  }
+  .createAcc {
+ padding:0 120px  0 !important ;
   }
 }
 
