--- a/src/App.css
+++ b/src/App.css
@@ -404,6 +404,38 @@ label {
   .createAcc {
     padding: 0 120px 0 !important ;
   }
+  .ontainer {
+    height: 25vh !important; /* Adjust the height as needed */
+  }
+  .ontainer {
+    flex-direction: column;
+  }
+
+  .centered-text h4 {
+    width: 600px !important;
+    height: 40px !important;
+    font-family: "Roboto" !important;
+    font-size: 20px !important;
+    font-weight: 600 !important;
+    line-height: 60px !important;
+    letter-spacing: 0em !important;
+    text-align: center !important;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .centered-text p {
+    width: 340px !important;
+    height: 85px !important;
+    font-family: "Roboto" !important;
+    font-size: 14.5px !important;
+    font-weight: 500 !important;
+    line-height: 23px !important;
+    letter-spacing: 0em !important;
+    text-align: center !important;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* NotificationPage page/*/
@@ -508,10 +540,31 @@ label {
   background-color: #e4e7ec;
 }
 .MP {
- 
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.ontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust the height as needed */
+  position: relative;
+  text-align: center;
+}
+
+.content {
+  text-align: center;
+}
+
+.centered-image {
+  width: 100%; /* Ensure image fills container */
+  max-width: 1500px; /* Adjust maximum width as needed */
+}
+
+.centered-text {
+  margin-top: 5px; /* Adjust spacing between image and text */
 }
 
 .centered-text {
